# BabyNest

./: .gitignore  package-lock.json  package.json  requirements.txt
ai-chatbot/babynest/: .gitignore  db_handler.py
ai-chatbot/babynest/src/babynest/: app.py  chat_models.py  components.py  crew.py  db_handler.py  main.py
apps/backend/: package.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/backend/src/chat/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts  message.interface.ts
apps/backend/src/journal/: cloudinary.service.ts  journal.controller.ts  journal.interface.ts  journal.module.ts  journal.service.ts
apps/backend/src/mail/: mail.service.ts
apps/backend/src/test/: test.controller.ts
apps/backend/src/users/: users.controller.ts  users.module.ts  users.service.ts
apps/web/: babel.config.cjs  jest.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/tests/: Home.test.tsx
backend/: package-lock.json
chatbot/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
chatbot/db/: chroma.sqlite3
chatbot/knowledge/: about.txt  brand_guidelines.txt
chatbot/src/babynest/: app.py  chat_models.py  components.py  crew.py  db_handler.py  test.py
chatbot/src/babynest/config/: agents.yaml  tasks.yaml
frontend/: index.html  package-lock.json  script.js  styles.css
(+40 files in other folders)
