[project]
name = "babynest"
version = "0.1.0"
description = "babynest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
babynest = "babynest.main:run"
run_crew = "babynest.main:run"
train = "babynest.main:train"
replay = "babynest.main:replay"
test = "babynest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
